--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@types/uuid": "^10.0.0",
+    "dotenv": "^17.2.2",
+    "groq-sdk": "^0.32.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
